--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gallery",
-  "version": "0.1.0",
+  "name": "jeojjang-web",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
